# BLADE

./: .env.example  .gitignore  .gitignore_embedding  .gitmodules  CHUNK_EMBEDDING.md  Dockerfile  GENERATE_SINGLE_LLM_PATCHES.md  LICENSE  README.md  RUN_ANALYSIS.md  Run_analysis.ipynb  Run_analysis.py  Run_analysis_beetlebox.ipynb  ast_to_embedding.py  beetlebox_post_process.ipynb  build_docker.sh  cache_stuff.py  docker-compose.yml  filtered_tracebacks.json  generate_dataset_from_bugsinpy.ipynb  generate_python_images.ipynb  generate_report.py  generate_single_llm_patches.ipynb  maybe.py  maybe_beetlebox.py  merged_output.json  parse_traceback_llms.ipynb  parse_traceback_llms.py  project_details.py  pyproject.toml  pytest.ini  requirements.txt  results.json  results_extract.json  results_raw.json  run_analysis.ipynb  run_analysis.py  run_analysis_file.ipynb  run_analysis_function.ipynb  run_ast.py  (+6 more)
cluster_how_to/: clone.md  cluster_readme.md  folders.md  limitations.md  login.md
docker/app/: Dockerfile
docker/code_runner/: Dockerfile
jobs/: everything.sbatch  run_ast.sbatch  run_llm.sbatch  test_job.sbatch
report/: BLADE.drawio
report/overleaf/: Main.tex  NobArticle.cls
scripts/: __init__.py  analyze_results.py  beetlebox_utils.py  bugsinpy_utils.py  embedding.py  hello.py  loc_stats.py  processor.py  repository.py  run_ast.py  run_snippet.py
tests/: test_bugsinpy.py  test_code_snippet.py  test_embedding.py  test_install_dependencies.py
utils/: __init__.py  ast_to_embedding.py  count_success.py  project_details.py  run_ast_old.py
(+6 files in other folders)
