[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "pooriaahmadi",email = "pooriababak444@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "agentrun (>=0.2.5,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
package-mode = false